--- a/《剑指 Offer》（第 2 版） 第 01-10 题.md
+++ b/《剑指 Offer》（第 2 版） 第 01-10 题.md
@@ -6,9 +6,92 @@
 
 ---
 
-### 3、数组中重复的数字
+
+| 序号 | 题目                         | 难易程度 | 总结                                                         |      |
+| ---- | ---------------------------- | -------- | ------------------------------------------------------------ | ---- |
+| 3    | 数组中重复的数字             | 中等     | 桶排序。多写几遍                                             |      |
+| 4    | 二维数组的查找               | 简单     | 模板写法，记住就好。不要用二分，容易写错。                   |      |
+| 6    | 从尾到头打印链表             | 简单     | 回溯算法。或者用栈。                                         |      |
+| 7    | 重建二叉树                   | 中等     | 算好偏移量就好了，如果容易算错，记得拿具体例子。             |      |
+| 8    | 二叉树的下一个结点           | 中等     | 独立作出了，但是少考虑一种情况。                             |      |
+| 补充 | LeetCode 第 106 题           |          |                                                              |      |
+| 9    | 用两个栈实现队列             |          | 整理在 LeetCode 上了。                                       |      |
+|      | 用队列实现两个栈             |          |                                                              |      |
+| 10   | 斐波拉契数列数列             |          | ==思考如何与快速幂扯上关系。==                               |      |
+|      | 基础斐波拉契数列             |          |                                                              |      |
+|      | 变态跳台阶                   |          | 动态规划，也可以用数学方法，归纳出通项公式。                 |      |
+|      | ==矩阵求法==                 |          |                                                              |      |
+| 11   | ==旋转数组中的最小数字==     | 重要     | 二分法。同 LeetCode 上的问题，==使用新的二分法模板再做一遍==。 |      |
+| 12   | 矩阵中的路径                 |          | floodfill：1、四个方向；2、状态重置。                        |      |
+|      | 单词搜索                     |          |                                                              |      |
+| 13   | 机器人的运动范围             |          | 作为上一题的练习。                                           |      |
+| 14   | 剪绳子                       |          | ==要会画树形图。==                                           |      |
+|      | 整数分割                     |          | LeetCode 343，动态规划，贪心算法                             |      |
+| 15   | 二进制中 $1$ 的个数          |          | 位运算。**`n & (n - 1)` 把最低位的 $1$ 变成 $0$。**          |      |
+|      | Python                       |          | Python 二进制有陷阱                                          |      |
+| 16   | 数值的整数次方               |          | 快速幂                                                       |      |
+| 17   | 打印从 1 到最大的 n 位数     |          |                                                              |      |
+| 18   | 删除链表中的结点             |          | 注意两个结点非空一起判断。                                   |      |
+| 19   | 正则表达式匹配               |          |                                                              |      |
+| 20   | 表示数值的字符串             |          |                                                              |      |
+| 21   | 调整数组使得奇数位于偶数之前 |          | 两路快排，**记住**，l > r 才停止，掌握更通用的写法。         |      |
+| 22   | 链表中倒数第 k 个结点        |          | 快慢指针                                                     |      |
+|      |                              |          |                                                              |      |
+| 26   | 树的子结构                   |          |                                                              |      |
+|      |                              |          |                                                              |      |
+| 28   | 判断一棵二叉树是否对称       |          | 递归和非递归都要会做，双端队列。                             |      |
+| 29   | 顺时针打印矩阵               |          |                                                              |      |
+| 30   | 包含 min 函数的栈            |          |                                                              |      |
+|      |                              |          |                                                              |      |
+
+
+
+---
+
+参考资料：
+
+B 站 UP 主“大雪菜”直播：https://www.acwing.com/activity/content/introduction/5/。
+
+[《剑指offer》面试题的Python实现](https://www.cnblogs.com/qiaojushuang/p/7822066.html)
+
+剑指Offer系列刷题笔记汇总
+https://blog.csdn.net/c406495762/article/details/79247243#%E9%93%BE%E8%A1%A8-8%E9%81%93
+
+https://github.com/gatieme/CodingInterviews
+
+[剑指Offer系列刷题笔记汇总](https://blog.csdn.net/c406495762/article/details/79247243#%E9%93%BE%E8%A1%A8-8%E9%81%93)。
+
+第 2 版 Java 实现代码仓库：<https://github.com/cris1313/SwordForOffer> 
+
+白夜行515 
+
+<https://blog.csdn.net/baiye_xing/article/details/78428561>
+
+剑指Offer——编程题的Java实现（更新完毕……） 
+
+<https://blog.csdn.net/u011464124/article/details/76706011>
+
+剑指offer题目java实现 
+
+<https://www.cnblogs.com/ysw-go/p/6272551.html>
+
+极客学院 
+
+<http://wiki.jikexueyuan.com/project/for-offer/question-twenty-seven.html>
+
+https://blog.csdn.net/column/details/codingintervieww.html>
+
+
+
+![image-20190107005346026](https://ws1.sinaimg.cn/large/006tNc79ly1fzjdhrw5ryj30ya0gaaco.jpg)
+
+---
+
+### 3、数组中重复的数字（桶排序，抽屉原理）
 
 参考资料：[《剑指 Offer》（第 2 版）第 3 题：数组中重复的数字](https://www.zybuluo.com/liweiwei1419/note/1397871)。
+
+这道题实际上是要求我们使用桶排序的思想，找出重复的数字。缺点就是会修改原始数组。
 
 Python 写法2：
 
@@ -38,6 +121,8 @@ LeetCode 第 287 题：[287. 寻找重复数](https://leetcode-cn.com/problems/f
 2. 只能使用额外的 *O*(1) 的空间。
 3. 时间复杂度小于 *O*(*n*2) 。
 4. 数组中只有一个重复的数字，但它可能不止重复出现一次。
+
+关键：“抽屉原理”和“分治”，具体用二分去做，是对“数”做二分，而不是“索引”。
 
 ```python
 class Solution:
@@ -88,7 +173,9 @@ class Solution:
 
 从讨论区看到，说这是分治法。
 
-Python 代码：从右上角开始找。一个一个找，不会错。
+
+
+Python 代码：从右上角开始找。一个一个找，不会错。（下面这个解法，记住就可以了。）
 
 ```python
 class Solution(object):
@@ -118,7 +205,7 @@ class Solution(object):
 
 其实不管是每行还是每列，都是有序数组，所以可以使用二分法。我写了个二分法，只是作为练习。
 
-Python 代码：下面的二分查找法并不建议在面试的时候写。
+Python 代码：（二分法不能保证一次写对，所以不建议在面试的时候写）
 
 ```python
 # 4、二维数组中的查找
@@ -359,31 +446,45 @@ class Solution(object):
 
 本题为前序遍历和中序遍历，最少需要两种遍历方式，才能重建二叉树。
 
+思路关键：前序遍历数组的第 $1$ 个数（即索引为 $0$）的数一定是二叉树的根结点，于是可以在中序遍历中找这个根结点的索引，然后把“前序遍历数组”和“中序遍历数组”分为两个部分，就分别对应二叉树的左子树和右子树，分别递归完成就可以了。
+
 ![image-20190120134854260](https://ws1.sinaimg.cn/large/006tNc79ly1fzd04idbnfj31620c2js4.jpg)
+
+注意点：
+
+1、编写递归方法的时候，首先要把特殊情况写好，后面就非常容易了。
+
+2、索引是几不好判断的时候，感觉就用一个具体的例子，就比如我上面画的这个图去思考，把具体的数换成我们使用的变量，这样思考的难度会降低，且不容易出错。
 
 Python 代码：
 
 ```python
-# -*- coding:utf-8 -*-
-# class TreeNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.left = None
-#         self.right = None
-class Solution:
-    # 返回构造的TreeNode根节点
-    def reConstructBinaryTree(self, pre, tin):
-        # write code here
-        if len(pre) == 0:
+class TreeNode(object):
+    def __init__(self, x):
+        self.val = x
+        self.left = None
+        self.right = None
+
+
+class Solution(object):
+    def buildTree(self, preorder, inorder):
+        """
+        返回构造的 TreeNode 根结点
+        :type preorder: List[int]
+        :type inorder: List[int]
+        :rtype: TreeNode
+        """
+        # 在编码过程中，一定要保证 len(pre) == len(tin)，否则逻辑一定不正确
+        if len(preorder) == 0:
             return None
-        elif len(pre) == 1:
-            return TreeNode(pre[0])
-        else:
-            root = TreeNode(pre[0])
-            # 直接得到在中序遍历中的位置，下面算好偏移量就好了，如果容易算错，记得拿具体例子
-            pos = tin.index(pre[0])
-            root.left = self.reConstructBinaryTree(pre[1:pos+1], tin[:pos])
-            root.right = self.reConstructBinaryTree(pre[pos+1:], tin[pos+1:])
+        if len(preorder) == 1:
+            # 这里要返回结点，而不是返回具体的数
+            return TreeNode(preorder[0])
+        root = TreeNode(preorder[0])
+        # 直接得到在中序遍历中的位置，下面算好偏移量就好了，如果容易算错，记得拿具体例子
+        pos = inorder.index(preorder[0])
+        root.left = self.buildTree(preorder[1:pos + 1], inorder[:pos])
+        root.right = self.buildTree(preorder[pos + 1:], inorder[pos + 1:])
         return root
 ```
 
@@ -435,15 +536,94 @@ class Solution:
    15   7
 ```
 
+Python 代码：
+
+```python
+class TreeNode(object):
+    def __init__(self, x):
+        self.val = x
+        self.left = None
+        self.right = None
+
+
+class Solution:
+    def buildTree(self, inorder, postorder):
+        """
+        :type inorder: List[int]
+        :type postorder: List[int]
+        :rtype: TreeNode
+        """
+
+        assert len(inorder) == len(postorder)
+
+        if len(inorder) == 0:
+            return None
+        if len(inorder) == 1:
+            # 这里要返回结点，而不是返回具体的数
+            return TreeNode(inorder[0])
+
+        root = TreeNode(postorder[-1])
+
+        pos = inorder.index(postorder[-1])
+
+        root.left = self.buildTree(inorder[:pos], postorder[:pos])
+        root.right = self.buildTree(inorder[pos + 1:], postorder[pos:-1])
+        return root
+
+
+# 用于验证的方法
+def validate(node):
+    if node is None:
+        return
+    validate(node.left)
+    print(node.val, end=' ')
+    validate(node.right)
+
+
+if __name__ == '__main__':
+    inorder = [9, 3, 15, 20, 7]
+    postorder = [9, 15, 7, 20, 3]
+    solution = Solution()
+    root = solution.buildTree(inorder, postorder)
+    validate(root)
+```
+
 ### 8、二叉树的下一个结点
 
 题目8：二叉树的下一个结点。用算导中提出的方法，画图来分析。
 
-关键：**看是否有右边的孩子**。
+画个图，把要分类讨论的情况分析清楚，编码就很容易了。关键：**看是否有右边的孩子**。
 
 ![image-20190107113109744](https://ws3.sinaimg.cn/large/006tNc79ly1fyxv36vb55j30tw0ko1kx.jpg)
 
 ![image-20190107112051561](https://ws3.sinaimg.cn/large/006tNc79ly1fyxush3r3mj314z0u07ab.jpg)
+
+Python 代码：
+
+```python
+class Solution(object):
+    def inorderSuccessor(self, q):
+        """
+        :type q: TreeNode
+        :rtype: TreeNode
+        """
+
+        if q is None:
+            return None
+
+        # 分类讨论1：如果这个结点有右子树，返回这个右子树的最小者
+        if q.right:
+            node = q.right
+            while node.left:
+                node = node.left
+            return node
+        # 分类讨论2：如果这个结点没有右子树，向上追溯，追到父亲结点的左结点是自己
+        while q.father:
+            if q.father.left == q:
+                return q.father
+            q = q.father
+        return None
+```
 
 ### 9、用两个栈实现队列、用队列实现两个栈
 
