--- a/《剑指 Offer》（第 2 版） 第 11-20 题.md
+++ b/《剑指 Offer》（第 2 版） 第 11-20 题.md
@@ -112,6 +112,38 @@ public class Solution {
 
 ### 14、剪绳子
 
+分析：动态规划。
+
+状态：dp[i]，把整数 i 至少分割成 2 个部分，各个部分都大于 0，它们的乘积。
+
+状态转移方程：用 j 遍历 1，2，…, i -1 ，要么分割成两部分： i-j 和 j，要么是 j 和 dp[i-j]，取最大者。
+
+Python 代码：dp[0] 这个位置没有用处。
+
+```python
+class Solution(object):
+    def maxProductAfterCutting(self, length):
+        """
+        :type length: int
+        :rtype: int
+        """
+
+        assert length > 1
+
+        dp = [0 for _ in range(length + 1)]
+
+        dp[1] = 1
+
+        for i in range(2, length + 1):
+            for j in range(1, i):
+                dp[i] = max(dp[i], j * (i - j), j * dp[i - j])
+        return dp[length]
+```
+
+
+
+
+
 同 LeetCode 343 题：给定一个正整数 n，将其拆分为至少两个正整数的和，并使这些整数的乘积最大化。
 返回你可以获得的最大乘积。例如，给定 n = 2，返回1（2 = 1 + 1）；给定 n = 10，返回36（10 = 3 + 3 + 4）。注意：你可以假设 n 不小于2且不大于58。
 
@@ -181,6 +213,8 @@ C++ 的解法：
 
 ![image-20190110145826208](https://ws2.sinaimg.cn/large/006tNc79ly1fz1hxsdlm4j30vi0m41kx.jpg)
 
+分析：位运算的问题，看答案做出来的，记住 `n & (n-1)` 能够消掉最低位的 $1$ 即可。
+
 Python 写法1：一位一位算就可以了。
 
 ```python
@@ -219,6 +253,28 @@ class Solution(object):
             n = n >> 1
             # print(n)
         return count
+```
+
+以下写法等价：
+
+```python
+class Solution(object):
+    def NumberOf1(self,n):
+        """
+        :type n: int
+        :rtype: int
+        """
+        counter  = 0
+        
+        # Python 中的 32 位整数没有溢出这回事，所以要强行变成 32 位
+        # 这一步相当于把这个数变成无符号整数，为了通过 judge 才这么做的
+        
+        n = n & 0xFFFFFFFF
+        
+        while n:
+            n = n &(n-1)
+            counter +=1
+        return counter
 ```
 
 C++ 写法：转成无符号数。
@@ -296,6 +352,44 @@ class Solution(object):
 ### 18-1、删除链表中重复的结点
 
 因为头结点可能被删，所以要搞一个虚拟头结点。
+
+Python 写法：
+
+```python
+class Solution(object):
+    def deleteDuplication(self, head):
+        """
+        :type head: ListNode
+        :rtype: ListNode
+        """
+        if head is None:
+            return None
+
+        dummy = ListNode(-1)
+        dummy.next = head
+        cur = dummy
+
+        # 一下子要看两个，所以是
+        while cur.next and cur.next.next:
+            if cur.next.val == cur.next.next.val:
+                # 删除的起点至少是 cur.next.next
+                del_node = cur.next.next
+
+                while del_node.next and del_node.val == del_node.next.val:
+                    del_node = del_node.next
+                # 来到了一个新的结点，值不同
+
+                cur.next = del_node.next
+                del_node.next = None
+            else:
+                cur = cur.next
+
+        return dummy.next
+```
+
+
+
+
 
 LeetCode 第 83 题： 删除排序链表中的重复元素，传送门：[83. 删除排序链表中的重复元素](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-list/description/)。
 
