--- a/《剑指 Offer》（第 2 版） 第 21-30 题.md
+++ b/《剑指 Offer》（第 2 版） 第 21-30 题.md
@@ -6,83 +6,8 @@
 
 ---
 
-参考资料：
 
-B 站 UP 主“大雪菜”直播：https://www.acwing.com/activity/content/introduction/5/。
-
-[《剑指offer》面试题的Python实现](https://www.cnblogs.com/qiaojushuang/p/7822066.html)
-
-剑指Offer系列刷题笔记汇总
-https://blog.csdn.net/c406495762/article/details/79247243#%E9%93%BE%E8%A1%A8-8%E9%81%93
-
-https://github.com/gatieme/CodingInterviews
-
-[剑指Offer系列刷题笔记汇总](https://blog.csdn.net/c406495762/article/details/79247243#%E9%93%BE%E8%A1%A8-8%E9%81%93)。
-
-第 2 版 Java 实现代码仓库：<https://github.com/cris1313/SwordForOffer> 
-
-白夜行515 
-
-<https://blog.csdn.net/baiye_xing/article/details/78428561>
-
-剑指Offer——编程题的Java实现（更新完毕……） 
-
-<https://blog.csdn.net/u011464124/article/details/76706011>
-
-剑指offer题目java实现 
-
-<https://www.cnblogs.com/ysw-go/p/6272551.html>
-
-极客学院 
-
-<http://wiki.jikexueyuan.com/project/for-offer/question-twenty-seven.html>
-
-https://blog.csdn.net/column/details/codingintervieww.html>
-
-
-
-![image-20190107005346026](https://ws2.sinaimg.cn/large/006tNc79ly1fyxcnz6majj30ya0gatcn.jpg)
-
-| 序号 | 题目                         | 难易程度 | 总结                                                         |      |
-| ---- | ---------------------------- | -------- | ------------------------------------------------------------ | ---- |
-| 3    | 数组中重复的数字             | 中等     | 桶排序。多写几遍                                             |      |
-| 4    | 二维数组的查找               | 简单     | 模板写法，记住就好。不要用二分，容易写错。                   |      |
-| 6    | 从尾到头打印链表             | 简单     | 回溯算法。或者用栈。                                         |      |
-| 7    | 重建二叉树                   | 中等     | 算好偏移量就好了，如果容易算错，记得拿具体例子。             |      |
-| 8    | 二叉树的下一个结点           | 中等     | 独立作出了，但是少考虑一种情况。                             |      |
-| 补充 | LeetCode 第 106 题           |          |                                                              |      |
-| 9    | 用两个栈实现队列             |          | 整理在 LeetCode 上了。                                       |      |
-|      | 用队列实现两个栈             |          |                                                              |      |
-| 10   | 斐波拉契数列数列             |          | ==思考如何与快速幂扯上关系。==                               |      |
-|      | 基础斐波拉契数列             |          |                                                              |      |
-|      | 变态跳台阶                   |          | 动态规划，也可以用数学方法，归纳出通项公式。                 |      |
-|      | ==矩阵求法==                 |          |                                                              |      |
-| 11   | ==旋转数组中的最小数字==     | 重要     | 二分法。同 LeetCode 上的问题，==使用新的二分法模板再做一遍==。 |      |
-| 12   | 矩阵中的路径                 |          | floodfill：1、四个方向；2、状态重置。                        |      |
-|      | 单词搜索                     |          |                                                              |      |
-| 13   | 机器人的运动范围             |          | 作为上一题的练习。                                           |      |
-| 14   | 剪绳子                       |          | ==要会画树形图。==                                           |      |
-|      | 整数分割                     |          | LeetCode 343，动态规划，贪心算法                             |      |
-| 15   | 二进制中 $1$ 的个数          |          | 位运算。**`n & (n - 1)` 把最低位的 $1$ 变成 $0$。**          |      |
-|      | Python                       |          | Python 二进制有陷阱                                          |      |
-| 16   | 数值的整数次方               |          | 快速幂                                                       |      |
-| 17   | 打印从 1 到最大的 n 位数     |          |                                                              |      |
-| 18   | 删除链表中的结点             |          |                                                              |      |
-| 19   | 正则表达式匹配               |          |                                                              |      |
-| 20   | 表示数值的字符串             |          |                                                              |      |
-| 21   | 调整数组使得奇数位于偶数之前 |          | 掌握跟通用的写法。                                           |      |
-| 22   | 链表中倒数第 k 个结点        |          | 快慢指针                                                     |      |
-|      |                              |          |                                                              |      |
-| 26   | 树的子结构                   |          |                                                              |      |
-|      |                              |          |                                                              |      |
-| 28   | 判断一棵二叉树是否对称       |          | 递归和非递归都要会做，双端队列。                             |      |
-| 29   | 顺时针打印矩阵               |          |                                                              |      |
-| 30   | 包含 min 函数的栈            |          |                                                              |      |
-|      |                              |          |                                                              |      |
-
----
-
-###21、调整数组使得奇数位于偶数之前
+###21、调整数组使得奇数位于偶数之前（两路快排，模板记住）
 
 思路1：有点类似“两路快排”的思路。“两路快排”中有一些细节需要复习一下。
 
@@ -95,6 +20,46 @@ https://blog.csdn.net/column/details/codingintervieww.html>
 交换两个指针指向的位置上的数，再进入下一层迭代，直到两个指针相遇为止；
 时间复杂度：$O(n)$。
 当两个指针相遇时，走过的总路程长度是 $n$，所以时间复杂度是 $O(n)$。
+
+使用“两路快排”，指针对撞的方法。
+
+Python 代码：
+
+```python
+class Solution(object):
+    def reOrderArray(self, array):
+        """
+        :type array: List[int]
+        :rtype: void
+        """
+        # 特判
+        size = len(array)
+        if size < 2:
+            return
+
+        l = 0
+        r = size - 1
+
+        # 始终保持 [0,l) 是奇数
+        # (r,size-1] 是偶数
+        
+        while True:
+            while l <= r and array[l] & 1 == 1:
+                l += 1
+            # 此时 l 来到了第一个偶数位置
+            while r >= l and array[r] & 1 == 0:
+                r -= 1
+            # 此时 r 来到了第一个奇数的位置
+            
+            # 这里一定是大于号，否则数组下标会越界
+            # 一定要特别注意，写 == 号会出错
+            if l > r:
+                break
+            array[l], array[r] = array[r], array[l]
+            l += 1
+            r -= 1
+        return array
+```
 
 C++ 代码：
 
@@ -161,6 +126,8 @@ public class Solution {
 
 ### 22、输入一个链表，输出该链表中倒数第 k 个结点
 
+分析：设置快慢指针，思路很简单，不过在具体编码的时候，还是有一些细节要注意的，特别是空指针的判断上。
+
 思路1：先遍历完，数出链表有多少个结点。
 
 ```python
@@ -192,7 +159,7 @@ class Solution(object):
         return p
 ```
 
-思路2：设置快慢指针，快指针先走 $k-1$ 步，然后快慢指针一起走。
+思路2（最佳思路）：设置快慢指针，快指针先走 $k-1$ 步，然后快慢指针一起走。
 
 C++ 写法：
 
@@ -231,9 +198,9 @@ class Solution(object):
 
 ### 23、链表中环的入口结点
 
-分析：因为快慢指针走的步数差是固定的。例如： A 手上有 100 块钱，A 每天赚 10 块钱，B 手上有 50 块钱，B 每天赚 20，一定有一天，你们的钱相等，而且只要环内结点个数这么多就可以了。
+分析：看的答案，记住结论就好，编码上还是要注意特判的情况，还有空指针的情况。
 
-**“慢”指针进入环的时候，“快指针”要来追它。**
+“慢”指针进入环的时候，“快指针”要来追它，因为快慢指针走的步数差是固定的。例如： A 手上有 100 块钱，A 每天赚 10 块钱，B 手上有 50 块钱，B 每天赚 20，一定有一天，你们的钱相等，而且只要环内结点个数这么多就可以了。
 
 ![image-20190110151143523](https://ws1.sinaimg.cn/large/006tNc79ly1fz1ibm2l4yj30ui0lk1kx.jpg)
 
@@ -277,7 +244,8 @@ class Solution(object):
                 # 说明链表中存在环
                 break
 		
-        # 注意：跳出循环的原因有很多，要逐个判断
+        # 注意：跳出循环的原因有两个，有可能是根本没有环，即上面  while fast and fast.next 不成立
+        # 也有可能是 slow == fast 里 break 的，分别讨论就可以了
         if fast is None or fast.next is None:
             return None
 
